--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "dependencies": {
     "@expo/metro-runtime": "^4.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "^52.0.7",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-router": "^4.0.6",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.7",
     "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -31,12 +32,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.10.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13"
   },
