zooming sort of works and added a room number

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/component/header.jsx", "app/index.jsx", "app/_layout.jsx"  ]
+    "expo-env.d.ts",
+    "app/component/header.jsx",
+    "app/index.jsx",
+    "app/_layout.jsx",
+    "nativewind-env.d.ts"
+  ]
 }
