--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/metro-runtime": "^4.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@openspacelabs/react-native-zoomable-view": "^2.3.1",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "^52.0.7",
